# flymode

./: .gitignore  ASSESSMENT.md  CLAUDE.md  DOCUMENTATION.en.md  DOCUMENTATION.md  README.en.md  README.md  README.zh-TW.md  bump-version.sh  install.sh  setup.sh
.github/workflows/: release.yml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/benches/: sync_benchmark.rs
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/notes/: mod.rs
src-tauri/src/p2p/: mod.rs  pair.rs
src-tauri/src/scheduler/: mod.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/terminal/: mod.rs
src-tauri/src/test_utils/: mod.rs
src-tauri/src/transfer/: mod.rs
src-tauri/src/wireless/: mod.rs
src-tauri/tests/: integration_test.rs
src-ui/: index.html  package-lock.json  package.json  vite.config.ts
src-ui/src/: App.tsx  style.css  test-setup.ts
src-ui/src/components/: LockScreen.tsx  NotesTab.tsx  P2PTab.tsx  QuickActionsTab.tsx  RulesTab.tsx  SettingsTab.tsx  SyncTab.tsx  TerminalModal.test.tsx  TerminalModal.tsx  Toast.tsx  TransferTab.tsx
