[package]
name = "flymode"
version = "0.2.0"
description = "Wireless scheduler + P2P sync + Notes - control WiFi/Bluetooth, sync files/notes across devices"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
dirs = "5"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
sysinfo = "0.30"

sha2 = "0.10"
base64 = "0.22"
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
async-trait = "0.1"
futures = "0.3"
bytes = "1"
bincode = "1"

ssh2 = { version = "0.9", features = ["vendored-openssl"] }
libsqlite3-sys = { version = "0.28", features = ["bundled"] }
rusqlite = { version = "0.31", features = ["bundled"] }

hostname = "0.4"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3"
pretty_assertions = "1"
proptest = "1"
criterion = { version = "0.5", features = ["async_tokio"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54", features = [
    "Win32_NetworkManagement_WiFi",
    "Win32_Devices_Bluetooth",
    "Win32_Foundation",
    "Win32_System_Power"
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
IOKit-sys = "0.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
opt-level = 1

[features]
default = []
test-helpers = []
